--- a/css/style.scss
+++ b/css/style.scss
@@ -4,3 +4,11 @@
 
 @import "foundation/_reset";
 @import "foundation/_base";
+
+// =============================
+// Layout
+// =============================
+
+@import "layout/_header";
+@import "layout/_container";
+@import "layout/_footer";
