--- a/css/style.scss
+++ b/css/style.scss
@@ -12,3 +12,20 @@
 @import "layout/_header";
 @import "layout/_container";
 @import "layout/_footer";
+
+// =============================
+// Object
+// =============================
+
+// -----------------------------
+// Component
+// -----------------------------
+
+// -----------------------------
+// Project
+// -----------------------------
+
+@import "object/component/_aboutus";
+@import "object/component/_activity";
+@import "object/component/_achievement";
+@import "object/component/_joinus";
