added new contents

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@
 // Project
 // -----------------------------
 
-@import "object/component/_aboutus";
-@import "object/component/_activity";
-@import "object/component/_achievement";
-@import "object/component/_joinus";
+@import "object/project/_aboutus";
+@import "object/project/_activity";
+@import "object/project/_achievement";
+@import "object/project/_joinus";
