--- a/css/object/project/_activity.scss
+++ b/css/object/project/_activity.scss
@@ -9,8 +9,9 @@
     &-study {
         max-width: 900px;
         margin: 0 auto;
+        line-height: 1.6em;
         &__title {
-            font-size: 20px
+            font-size: 20px;
         }
 
         &__items {
