changed activity finished

--- a/css/object/project/_hero.scss
+++ b/css/object/project/_hero.scss
@@ -1,7 +1,7 @@
 p-hero {
     background-image: url('../../../image/home.jpg');
     position: relative;
-
+    padding: 16px 0;
     img {
         width: 80%;
         max-width: 500px;
