--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -1,3 +1,22 @@
 .l-footer {
-    height: 160px;
+    height: 144px;
+    max-width: 500px;
+    margin: 0 auto;    
+    img {
+        width: 20%;
+        height: auto;
+        max-width: 100px;
+        float: left;
+    }
+
+    a {
+        text-align: center;
+        color: black;
+        text-decoration-color: black;
+        text-decoration-line: none;
+        margin: 16px 16px;
+        font-size: 16px;
+        overflow: hidden;
+        align-self: center;
+    }
 }
