--- a/css/object/project/_aboutus.scss
+++ b/css/object/project/_aboutus.scss
@@ -1,6 +1,8 @@
 .p-aboutus {
+    padding: 16px 0;
     &__description {
         max-width: 900px;
+        width: 95%;
         margin: 0 auto;
         text-align: center;
         line-height: 1.6em;
