--- a/css/object/project/_achievement.scss
+++ b/css/object/project/_achievement.scss
@@ -1,3 +1,12 @@
 .p-achievement {
-    
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 16px 0;
+    &__year {
+        line-height: 1.6em;
+        font-size: 20px;
+    }
+    &__items {
+        line-height: 1.6em;
+    }
 }
