--- a/css/object/project/_activity.scss
+++ b/css/object/project/_activity.scss
@@ -1,17 +1,22 @@
 .p-activity {
     background-color: #f5f5f5;
+    padding: 16px 0;
     &__description {
         max-width: 900px;
+        width: 95%;
         margin: 0 auto;
         line-height: 1.6em;
     }
 
     &-study {
         max-width: 900px;
+        width: 95%;
         margin: 0 auto;
         line-height: 1.6em;
         &__title {
             font-size: 20px;
+            font-weight: bold;
+            margin: 8px 0;
         }
 
         &__items {
