--- a/css/object/project/_joinus.scss
+++ b/css/object/project/_joinus.scss
@@ -1,6 +1,21 @@
 .p-joinus {
     background-color: #f5f5f5;
+    padding: 16px 0;
     &__description {
         max-width: 900px;
+        width: 95%;
+        margin: 0 auto;
+        line-height: 1.6em;
+    }
+    
+    &__line {
+        text-align: center;
+        margin: 0 auto;
+        position: relative;
+        img {
+            width: 80%;
+            max-width: 300px;
+            margin: 16px auto;
+        }
     }
 }
