--- a/css/style.css
+++ b/css/style.css
@@ -44,41 +44,94 @@ body {
   max-width: 1024px; }
 
 .l-footer {
-  height: 160px; }
+  height: 144px;
+  max-width: 500px;
+  margin: 0 auto; }
+  .l-footer img {
+    width: 20%;
+    height: auto;
+    max-width: 100px;
+    float: left; }
+  .l-footer a {
+    text-align: center;
+    color: black;
+    -webkit-text-decoration-color: black;
+            text-decoration-color: black;
+    -webkit-text-decoration-line: none;
+            text-decoration-line: none;
+    margin: 16px 16px;
+    font-size: 16px;
+    overflow: hidden;
+    -webkit-align-self: center;
+        -ms-flex-item-align: center;
+            align-self: center; }
 
 .c-headline {
   text-align: center;
   font-size: 32px;
-  position: relative; }
+  position: relative;
+  margin: 32px 64px;
+  font-weight: bold; }
 
 .c-subtitle {
   text-align: center;
-  font-size: 24px; }
-
-.p-aboutus__description {
-  max-width: 900px;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 1.6em;
+  font-size: 24px;
   font-weight: bold; }
 
+.p-aboutus {
+  padding: 16px 0; }
+  .p-aboutus__description {
+    max-width: 900px;
+    width: 95%;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.6em;
+    font-weight: bold; }
+
 .p-activity {
-  background-color: #f5f5f5; }
+  background-color: #f5f5f5;
+  padding: 16px 0; }
   .p-activity__description {
     max-width: 900px;
+    width: 95%;
     margin: 0 auto;
     line-height: 1.6em; }
   .p-activity-study {
     max-width: 900px;
+    width: 95%;
     margin: 0 auto;
     line-height: 1.6em; }
     .p-activity-study__title {
-      font-size: 20px; }
+      font-size: 20px;
+      font-weight: bold;
+      margin: 8px 0; }
+
+.p-achievement {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 16px 0; }
+  .p-achievement__year {
+    line-height: 1.6em;
+    font-size: 20px; }
+  .p-achievement__items {
+    line-height: 1.6em; }
 
 .p-joinus {
-  background-color: #f5f5f5; }
+  background-color: #f5f5f5;
+  padding: 16px 0; }
   .p-joinus__description {
-    max-width: 900px; }
+    max-width: 900px;
+    width: 95%;
+    margin: 0 auto;
+    line-height: 1.6em; }
+  .p-joinus__line {
+    text-align: center;
+    margin: 0 auto;
+    position: relative; }
+    .p-joinus__line img {
+      width: 80%;
+      max-width: 300px;
+      margin: 16px auto; }
 
 .u-mt1 {
   margin-top: 1px; }
