--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,7 @@
 // Project
 // -----------------------------
 
+@import "object/project/_hero";
 @import "object/project/_aboutus";
 @import "object/project/_activity";
 @import "object/project/_achievement";
