--- a/css/object/project/_hero.scss
+++ b/css/object/project/_hero.scss
@@ -1,7 +1,23 @@
-p-hero {
-    background-image: url('../../../image/home.jpg');
+.p-hero {
+    background-image: url('../image/home.jpg');
     position: relative;
     padding: 16px 0;
+    width: 100wh;
+    height: 56vh;
+    background-position: left center;
+    background-size: cover;
+
+    // 写真を暗くする
+    &::before {
+        background-color: rgba(0,0,0,0.5);
+        /* どの範囲に重ねるかを指定 */
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        content: ' ';  
+      }
     img {
         width: 80%;
         max-width: 500px;
