--- a/css/style.css
+++ b/css/style.css
@@ -130,13 +130,19 @@ body {
 
 .p-achievement {
   max-width: 900px;
-  margin: 0 auto;
-  padding: 16px 0; }
+  width: 95%;
+  margin: 0 auto; }
   .p-achievement__year {
     line-height: 1.6em;
-    font-size: 20px; }
+    font-size: 20px;
+    font-weight: bold; }
   .p-achievement__items {
     line-height: 1.6em; }
+    .p-achievement__items ul > li {
+      margin-bottom: 16px;
+      line-height: 1.6em; }
+      .p-achievement__items ul > li > ul {
+        margin-left: 30px; }
 
 .p-joinus {
   background-color: #f5f5f5;
