--- a/css/style.scss
+++ b/css/style.scss
@@ -40,3 +40,15 @@
 
 @import "object/utiity/_margin";
 @import "object/utiity/_padding";
+
+// =============================
+// Variable
+// =============================
+
+@import "variable/_variable";
+
+// =============================
+// Mixin
+// =============================
+
+@import "mixin/_mixin";
