--- a/css/object/project/_aboutus.scss
+++ b/css/object/project/_aboutus.scss
@@ -1,7 +1,9 @@
+@import "../../variable/variable";
+
 .p-aboutus {
     padding: 16px 0;
     &__description {
-        max-width: 900px;
+        max-width: $width-max;
         width: 95%;
         margin: 0 auto;
         text-align: center;
