--- a/css/object/project/_joinus.scss
+++ b/css/object/project/_joinus.scss
@@ -2,7 +2,7 @@
     background-color: #f5f5f5;
     padding: 16px 0;
     &__description {
-        max-width: 900px;
+        max-width: $width-max;
         width: 95%;
         margin: 0 auto;
         line-height: 1.6em;
