--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,21 @@ table {
 body {
   font-family: "Noto Sans Japanese"; }
 
+.l-header {
+  background-color: white;
+  margin: 0 auto;
+  padding: 0;
+  height: 72px; }
+  .l-header__logo {
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    background-color: white; }
+    .l-header__logo img {
+      height: 80%;
+      max-height: 40px;
+      margin: 16px auto; }
+
 .l-container {
   margin: 0 auto;
   width: 100%;
