--- a/css/object/project/_hero.scss
+++ b/css/object/project/_hero.scss
@@ -1,3 +1,5 @@
+@import "../../variable/variable";
+
 .p-hero {
     background-image: url('../image/home.jpg');
     position: relative;
@@ -9,7 +11,7 @@
 
     // 写真を暗くする
     &::before {
-        background-color: rgba(0,0,0,0.5);
+        // background-color: rgba(0,0,0,0.5);
         /* どの範囲に重ねるかを指定 */
         position: absolute;
         top: 0;
@@ -23,4 +25,25 @@
         max-width: 500px;
     }
 
+    &-introduction {
+        margin: 64px auto;
+        padding: 0;
+        background-color: white;
+        display: inline-block;
+        vertical-align: middle;
+        &__title {
+            text-align: center;
+            color: white;
+            font-size: 32px;
+            font-weight: bold;
+            line-height: 1.6em;
+        }
+        &__description {
+            text-align: center;
+            line-height: 1.6em;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    }
 }
