--- a/css/object/project/_achievement.scss
+++ b/css/object/project/_achievement.scss
@@ -1,21 +1,25 @@
+@import "../../variable/variable";
 .p-achievement {
-    max-width: $width-max;
-    width: 95%;
-    margin: 0 auto;
-    &__year {
-        line-height: 1.6em;
-        font-size: 20px;
-        font-weight: bold;
-    }
-    &__items {
-        line-height: 1.6em;
-
-        ul {
-            > li {
-                margin-bottom: 16px;
-                line-height: 1.6em;
-                > ul {
-                    margin-left: 30px;
+    background-color: #f5f5f5;
+    padding: 16px 0;
+    &-item {
+        width: 95%;
+        max-width: $width-max;
+        margin: 0 auto;
+        &__year {
+            line-height: 1.6em;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        &__items {
+            line-height: 1.6em;
+            ul {
+                > li {
+                    margin-bottom: 16px;
+                    line-height: 1.6em;
+                    > ul {
+                        margin-left: 30px;
+                    }
                 }
             }
         }
