--- a/css/object/project/_activity.scss
+++ b/css/object/project/_activity.scss
@@ -1,5 +1,6 @@
 .p-activity {
-    background-color: #f5f5f5;
+    // background-color: #f5f5f5;
+    background-color: #ffffff;
     padding: 16px 0;
     &__description {
         max-width: $width-max;
