--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
     font-weight: bold; }
 
 .p-activity {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   padding: 16px 0; }
   .p-activity__description {
     max-width: 640px;
@@ -171,23 +171,25 @@ body {
       margin: 8px 0; }
 
 .p-achievement {
-  max-width: 640px;
-  width: 95%;
-  margin: 0 auto; }
-  .p-achievement__year {
-    line-height: 1.6em;
-    font-size: 20px;
-    font-weight: bold; }
-  .p-achievement__items {
-    line-height: 1.6em; }
-    .p-achievement__items ul > li {
-      margin-bottom: 16px;
+  background-color: #f5f5f5;
+  padding: 16px 0; }
+  .p-achievement-item {
+    width: 95%;
+    max-width: 640px;
+    margin: 0 auto; }
+    .p-achievement-item__year {
+      line-height: 1.6em;
+      font-size: 20px;
+      font-weight: bold; }
+    .p-achievement-item__items {
       line-height: 1.6em; }
-      .p-achievement__items ul > li > ul {
-        margin-left: 30px; }
+      .p-achievement-item__items ul > li {
+        margin-bottom: 16px;
+        line-height: 1.6em; }
+        .p-achievement-item__items ul > li > ul {
+          margin-left: 30px; }
 
 .p-joinus {
-  background-color: #f5f5f5;
   padding: 16px 0; }
   .p-joinus__description {
     max-width: 640px;
