--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -1,9 +1,10 @@
 .l-footer {
-    height: 144px;
-    max-width: 500px;
-    width: 95%;
+    height: 96px;
+    // max-width: 500px;
     margin: 0 auto;
-
+    background-color: #f5f5f5;
+    padding: 16px;
+    text-align: center;
     img {
         width: 20%;
         height: auto;
