--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,11 @@ body {
   max-width: 1024px; }
 
 .l-footer {
-  height: 144px;
-  max-width: 500px;
-  width: 95%;
-  margin: 0 auto; }
+  height: 96px;
+  margin: 0 auto;
+  background-color: #f5f5f5;
+  padding: 16px;
+  text-align: center; }
   .l-footer img {
     width: 20%;
     height: auto;
