--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ body {
   background-image: url("../image/home.jpg");
   position: relative;
   padding: 16px 0;
-  width: 100wh;
   height: 56vh;
   background-position: left center;
   background-size: cover; }
@@ -117,11 +116,10 @@ body {
     width: 80%;
     max-width: 500px; }
   .p-hero-introduction {
-    margin: 64px auto;
-    padding: 0;
     background-color: white;
     display: inline-block;
-    vertical-align: middle; }
+    vertical-align: middle;
+    padding-top: calc(56vh/3); }
     .p-hero-introduction__title {
       text-align: center;
       color: white;
