--- a/css/object/project/_achievement.scss
+++ b/css/object/project/_achievement.scss
@@ -7,6 +7,7 @@
         max-width: $width-max;
         margin: 0 auto;
         &__year {
+            text-align: center;
             line-height: 1.6em;
             font-size: 20px;
             font-weight: bold;
