--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ body {
     max-width: 640px;
     margin: 0 auto; }
     .p-achievement-item__year {
+      text-align: center;
       line-height: 1.6em;
       font-size: 20px;
       font-weight: bold; }
