--- a/css/object/project/_hero.scss
+++ b/css/object/project/_hero.scss
@@ -3,7 +3,7 @@
 .p-hero {
     background-image: url('../image/home.jpg');
     position: relative;
-    padding: 16px 0;
+    padding: 8px 16px 24px;
     height: 56vh;
     background-position: left center;
     background-size: cover;
@@ -37,6 +37,7 @@
             line-height: 1.6em;
         }
         &__description {
+            padding-top: 8px;
             text-align: center;
             line-height: 1.6em;
             color: white;
