--- a/css/object/project/_activity.scss
+++ b/css/object/project/_activity.scss
@@ -26,7 +26,7 @@
         &__title {
             font-size: 20px;
             font-weight: bold;
-            margin: 8px 0;
+            margin: 16px 0 8px;
         }
 
         &__items {
