--- a/css/object/project/_achievement.scss
+++ b/css/object/project/_achievement.scss
@@ -1,31 +1,42 @@
 @import "../../variable/variable";
 .p-achievement {
     background-color: #f5f5f5;
-    padding: 16px 0;
+    padding: 16px 0 32px;
     &-item {
         width: 95%;
         max-width: $width-max;
         margin: 0 auto;
+        
         &__year {
             text-align: center;
             line-height: 1.6em;
             font-size: 20px;
             font-weight: bold;
+            margin: 8px 0 16px;
         }
         &__items {
             line-height: 1.6em;
             ul {
                 > li {
-                    list-style: none;
-                    width: 33.3%;
-                    flex-grow: 2;
-                    padding: 8px 0;
-                    width: auto;
+                    margin-bottom: 16px;
+                    > strong {
+                        color: firebrick;
+                        margin: 16px 0;
+                    }
+                    > p {
+                        font-weight: bold;
+                    }
                     > ul {
                         margin-left: 30px;
                         display: flex;
                         flex-wrap: wrap;
-                        justify-content: space-around;
+                        justify-content: flex-start;
+                        > li {
+                            flex-grow: 2;
+                            padding: 2px;
+                            margin: 0;
+                            width: auto;
+                        }
                     }
                 }
             }
