--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body {
 
 .p-achievement {
   background-color: #f5f5f5;
-  padding: 16px 0; }
+  padding: 16px 0 32px; }
   .p-achievement-item {
     width: 95%;
     max-width: 640px;
@@ -181,18 +181,17 @@ body {
       text-align: center;
       line-height: 1.6em;
       font-size: 20px;
-      font-weight: bold; }
+      font-weight: bold;
+      margin: 8px 0 16px; }
     .p-achievement-item__items {
       line-height: 1.6em; }
       .p-achievement-item__items ul > li {
-        list-style: none;
-        width: 33.3%;
-        -webkit-box-flex: 2;
-        -webkit-flex-grow: 2;
-            -ms-flex-positive: 2;
-                flex-grow: 2;
-        padding: 8px 0;
-        width: auto; }
+        margin-bottom: 16px; }
+        .p-achievement-item__items ul > li > strong {
+          color: firebrick;
+          margin: 16px 0; }
+        .p-achievement-item__items ul > li > p {
+          font-weight: bold; }
         .p-achievement-item__items ul > li > ul {
           margin-left: 30px;
           display: -webkit-box;
@@ -202,9 +201,18 @@ body {
           -webkit-flex-wrap: wrap;
               -ms-flex-wrap: wrap;
                   flex-wrap: wrap;
-          -webkit-justify-content: space-around;
-              -ms-flex-pack: distribute;
-                  justify-content: space-around; }
+          -webkit-box-pack: start;
+          -webkit-justify-content: flex-start;
+              -ms-flex-pack: start;
+                  justify-content: flex-start; }
+          .p-achievement-item__items ul > li > ul > li {
+            -webkit-box-flex: 2;
+            -webkit-flex-grow: 2;
+                -ms-flex-positive: 2;
+                    flex-grow: 2;
+            padding: 2px;
+            margin: 0;
+            width: auto; }
 
 .p-joinus {
   padding: 16px 0; }
