--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ body {
             width: auto; }
 
 .p-joinus {
-  padding: 16px 0; }
+  padding: 8px 0 24px; }
   .p-joinus__description {
     max-width: 640px;
     width: 95%;
@@ -223,7 +223,7 @@ body {
     line-height: 1.6em; }
   .p-joinus__line {
     text-align: center;
-    margin: 0 auto;
+    margin: 16px auto;
     position: relative; }
 
 .u-mt1 {
