--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -17,10 +17,11 @@
         text-align: center;
         color: black;
         text-decoration-color: black;
-        text-decoration-line: none;
+        // text-decoration-line: none;
         margin: auto 16px;
         padding: auto 0;
         font-size: 16px;
+        font-weight: bold;
         display: inline-block;
         vertical-align: middle;
     }
