--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,10 @@ body {
     color: black;
     -webkit-text-decoration-color: black;
             text-decoration-color: black;
-    -webkit-text-decoration-line: none;
-            text-decoration-line: none;
     margin: auto 16px;
     padding: auto 0;
     font-size: 16px;
+    font-weight: bold;
     display: inline-block;
     vertical-align: middle; }
 
