--- a/css/object/component/_headline.scss
+++ b/css/object/component/_headline.scss
@@ -2,6 +2,11 @@
     text-align: center;
     font-size: 32px;
     position: relative;
-    margin: 32px 64px;
+    margin: 32px auto;
+    padding-bottom: 8px;
     font-weight: bold;
+    border-bottom: 4px solid black;
+
+    display: block;
+    width: auto;
 }
